--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,23 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx2G
-org.gradle.daemon=true
-org.gradle.configureondemand=true
-org.gradle.parallel=true
-version_mc=1.12.2
-version=1.9.8
-version_jei=4.16.1.302
-version_crafttweaker=4.1.14.521
+org.gradle.jvmargs = -Xmx3G
+
+# Mod Information
+mod_version = 1.9.8
+maven_group = com.hbm
+archives_base_name = ntm
+
+# If any properties changes below this line, run `gradlew setupDecompWorkspace` and refresh gradle again to ensure everything is working correctly.
+
+# Boilerplate Options
+use_mixins = false
+use_coremod = false
+use_assetmover = false
+
+# Access Transformer files should be in the root of `resources` folder and with the filename formatted as: `{archives_base_name}_at.cfg`
+use_access_transformer = false
+
+# Coremod Arguments
+include_mod = true
+coremod_plugin_class_name =
+version_crafttweaker=4.1.20.695
