fix more conflicts

--- a/build.gradle
+++ b/build.gradle
@@ -111,10 +111,6 @@ repositories {
         name = "galacticraft"
         url = "https://maven.galacticraft.net/repository/legacy/"
     }
-    maven { //  baubles
-        name = "mcmoddev"
-        url = "https://maven.mcmoddev.com"
-    }
     maven {
         name = 'CoFH Maven'
         url = 'https://maven.covers1624.net'
@@ -150,9 +146,9 @@ dependencies {
     implementation rfg.deobf('curse.maven:had-enough-items-557549:4543375')
     implementation rfg.deobf("curse.maven:groovyscript-687577:4905039")
     implementation rfg.deobf("curse.maven:mekanism-ce-399904:4804509")
+    implementation rfg.deobf("curse.maven:baubles-lts-655747:3916343")
     compileOnly "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-${version_crafttweaker}"
     compileOnly rfg.deobf("dev.galacticraft:galacticraft-legacy:${version_gc}")
-    compileOnly rfg.deobf("com.azanor:Baubles:${version_baubles}")
     compileOnly rfg.deobf("cofh:RedstoneFlux:1.12-${version_redstoneflux}:universal")
     compileOnly rfg.deobf("CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-${version_crafttweaker}")
     compileOnly "li.cil.oc:OpenComputers:MC1.12.2-1.7.+:api" 
