update artifact name

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,17 +15,17 @@ show_testing_output = false
 
 # Mod Information
 # HIGHLY RECOMMEND complying with SemVer for mod_version: https://semver.org/
-mod_version = 1.0.0
-root_package = com.example
-mod_id = modid
-mod_name = Mod Name
+mod_version = 2.0.2
+root_package = com
+mod_id = hbm
+mod_name = HBM's Nuclear Tech - Extended Edition
 
 # Mod Metadata (Optional)
-mod_description =
-mod_url =
-mod_update_json =
+mod_description =A mod that adds all kinds of nukes and other things
+mod_url =https://github.com/Alcatergit/Hbm-s-Nuclear-Tech-GIT
+mod_update_json =https://www.curseforge.com/minecraft/mc-mods/hbms-nuclear-tech-mod-extended-edition/files
 # Delimit authors with commas
-mod_authors =
+mod_authors =Alcater, Drillgon200, HBMMods/The Bobcat
 mod_credits =
 mod_logo_path =
 
